--- a/hm2/dockerfile
+++ b/hm2/dockerfile
@@ -5,4 +5,4 @@ RUN go mod download
 COPY *.go ./
 RUN CGO_ENABLED=0 GOOS=linux go build -o /health-check
 EXPOSE 8000
-CMD ["/health-check"]
+ENTRYPOINT ["/health-check"]
